<resources>
    <string name="app_name" translatable="false">Buho</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Buho</string>
    <string name="title_home">Map</string>
    <string name="title_history">History</string>
    <string name="title_tips">Tips</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buhoLogoContentDescription">Buho logo. An owl appears at the top and a shield with the letters IoT appear at the bottom</string>
    <string name="map_frag_tv_device_1">Device 1</string>
    <string name="map_frag_tv_device_1_description">Yesterday, this new IoT device was discovered</string>
    <string name="map_frag_tv_device_2">Device 2</string>
    <string name="map_frag_tv_device_2_description">Yesterday, this new IoT device was discovered</string>
    <string name="map_frag_tv_device_3">Device 3</string>
    <string name="map_frag_tv_device_3_description">Yesterday, you blocked this device from having access to your location</string>
    <string name="history_frag_tv_yesterday">Yesterday</string>
    <string name="tips_frag_tv_smarthome_tips">Smart home tips</string>
    <string name="tips_frag_tv_tip_1">Tip 1</string>
    <string name="tips_frag_tv_tip_1_description">Scan your Wi-Fi network to identify which devices are connected to your Wi-Fi</string>
    <string name="tips_frag_tv_tip_2">Tip 2</string>
    <string name="tips_frag_tv_tip_2_description">Change the default passwords that come with your devices</string>
    <string name="tips_frag_tv_tip_3">Tip 3</string>
    <string name="tips_frag_tv_tip_3_description">Check if your devices have a security update</string>
</resources>