<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.educationalappsdev.buho.ui.map.MapFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.educationalappsdev.buho.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_tips"
        android:name="com.educationalappsdev.buho.ui.tips.TipsFragment"
        android:label="@string/title_tips"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.educationalappsdev.buho.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>